--- a/frontend/blata-ditz-frontend/src/index.css
+++ b/frontend/blata-ditz-frontend/src/index.css
@@ -26,6 +26,8 @@ body {
   min-width: 320px;
   min-height: 100vh;
   font-weight: 400;
+
+  scroll-behavior: smooth;
 }
 
 a {
@@ -94,7 +96,8 @@ select,
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: relative;
+  margin-top: 2vh;
 
   width: 100%;
   height: 20vh;
