--- a/frontend/blata-ditz-frontend/src/pages/Admin.css
+++ b/frontend/blata-ditz-frontend/src/pages/Admin.css
@@ -2,11 +2,17 @@
   margin: 0 auto;
   height: fit-content;
 }
+
+ul,
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 .admin-container {
   display: flex;
   flex-direction: column;
   padding: clamp(1rem, 2vw, 1.5rem) clamp(1rem, 8vw, 8rem);
-  width: 100%;
 }
 .header h1 {
   font-size: 2.4rem;
@@ -14,15 +20,14 @@
 .dashboard {
   display: flex;
   flex-direction: row;
+  width: 100%;
+  gap: 5rem;
 }
+
 .sidebar {
   width: 20%;
 }
 
-.sidebar ul {
-  padding: 0;
-  margin: 0;
-}
 .sidebar li {
   list-style: none;
   margin-bottom: 1.7rem;
@@ -34,4 +39,26 @@
   display: flex;
   align-items: center;
   gap: 1rem;
+}
+
+.main-content {
+  width: 100%;
+}
+/* STYLES FOR ORDERS-TAB */
+.orders-tab {
+  background-color: #010101;
+  border-radius: 5px;
+  border: 1px solid #d5d6d9;
+  width: auto;
+  padding: 1rem 2rem;
+}
+
+.orders-tab ul {
+  display: flex;
+  flex-direction: row;
+  gap: 3.2rem;
+  justify-content: space-evenly;
+  font-size: 1.6rem;
+  text-transform: uppercase;
+  color: #ffcf33;
 }
