--- a/frontend/blata-ditz-frontend/src/pages/Admin.css
+++ b/frontend/blata-ditz-frontend/src/pages/Admin.css
@@ -94,18 +94,22 @@ li {
   color: #ffcf33;
 }
 
-.admin-orders-columnHeader {
+.admin-orders-columnHeader,
+.admin-orders-list {
   display: grid;
-  grid-template-columns: 1fr 0.3fr 2fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 0.7fr 0.2fr 2fr 1fr 1fr 1fr 1fr;
   font-size: 1.6rem;
   color: #ffcf33;
-  padding: 0 1.2rem;
+  padding: 0 2rem 0 1.2rem;
+  gap: 0.6rem;
 }
 
 .admin-orders-list {
-  display: grid;
-  grid-template-columns: 1fr 0.3fr 2fr 1fr 1fr 1fr 1fr;
-  font-size: 1.6rem;
+  color: white;
+}
 
-  padding: 0 1.2rem;
+.admin-orders-list span,
+.admin-orders-columnHeader span {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
