updated landing page for featured sections

--- a/frontend/blata-ditz-frontend/src/pages/Landing.css
+++ b/frontend/blata-ditz-frontend/src/pages/Landing.css
@@ -1,6 +1,6 @@
 .page-content {
-  margin-left: 10vw;
-  margin-right: 10vw;
+  margin-left: 6vw;
+  margin-right: 6vw;
 }
 
 /*featured games sections*/
@@ -15,7 +15,7 @@
   border-radius: 10px;
   margin-top: 3vh;
 
-  padding: 6vh 3vw 3vh 3vw;
+  padding: 3vh 3vw 3vh 3vw;
 
   backdrop-filter: blur(10px); /* Blurs content behind the element */
   border: 1px solid rgba(255, 255, 255, 0.3); /* Subtle border */
@@ -59,6 +59,7 @@
 
 .sectiontitle {
   font-family: "Ubuntu", sans-serif;
+  padding-top: 3vh;
 
   font-weight: 600;
   font-size: 2.5rem;
@@ -83,9 +84,65 @@
 
 .featuredright {
   width: 70%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  padding-left: 30px;
+}
+
+.featuredgames {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+
+  width: 100%;
+  height: 100%;
+}
+
+.ftgame {
+  height: 100%;
+  width: 90%;
+  margin-left: 20px;
+
+  border-radius: 10px;
+
+  background-color: black;
+  position: relative;
+  overflow: hidden;
+}
+
+.ftgame img {
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+
+  object-fit: cover;
+  user-select: none;
+}
+
+.ftgame-title {
+  height: 35%;
+  width: 100%;
+
+  background: #000000;
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(8, 0, 0, 0.47) 100%
+  );
+
+  opacity: 0;
+  transition: 0.5s ease;
+  border-radius: 0px 0px 10px 10px;
+
+  position: absolute;
+  bottom: 0;
+
+  padding-left: 15px;
+  padding-right: 15px;
+
+  font-family: "Ubuntu", sans-serif;
+  font-size: 1.5rem;
+}
+
+.ftgame-title:hover {
+  opacity: 1;
 }
 
 /*scroll back to top button*/
