--- a/frontend/blata-ditz-frontend/src/pages/Product.css
+++ b/frontend/blata-ditz-frontend/src/pages/Product.css
@@ -1,16 +1,20 @@
 .page-content {
   margin-left: 6vw;
   margin-right: 6vw;
-  margin-top: 5vh;
+  margin-top: 10vh;
+  margin-bottom: 5vh;
 
   font-family: "Ubuntu", sans-serif;
 }
+
+/*main product section*/
 
 .main-product-container {
   width: 100%;
   height: 70vh;
   padding-left: 5vw;
   padding-right: 5vw;
+  margin-bottom: 5vh;
 
   background-color: #131416;
 
@@ -25,13 +29,45 @@
 
 .main-product-images {
   width: 55%;
+
+  padding-top: 7vh;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.main-product-images-small {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  padding-bottom: 10vh;
+
+  img {
+    height: 14vh;
+    width: 8vw;
+
+    object-fit: cover;
+  }
+
+  img:hover {
+    opacity: 0.5;
+    transition: 0.5s ease;
+  }
+}
+
+.main-product-images-main {
+  margin-left: 3vw;
+  img {
+    height: 55vh;
+    width: 25vw;
+
+    object-fit: cover;
+  }
 }
 
 .main-product-descriptions {
   width: 45%;
 
-  padding-top: 6vh;
-  padding-bottom: 4vh;
+  padding-top: 2vh;
 
   display: flex;
   flex-direction: column;
@@ -48,8 +84,10 @@
 .main-product-name {
   color: #ffcf33;
 
-  font-size: 1.5vw;
+  font-size: 2.25rem;
   font-weight: 500;
+
+  margin-bottom: 1vh;
 }
 
 .divider {
@@ -62,7 +100,7 @@
 }
 
 .main-product-sections {
-  font-size: 1.1vw;
+  font-size: 1.5rem;
   font-weight: 400;
   margin-right: 10px;
   margin-top: 0;
@@ -71,19 +109,90 @@
 }
 
 .main-product-textdesc {
-  font-size: 0.9vw;
+  font-size: 1.5rem;
+  font-weight: 200;
   color: white;
 
   margin-bottom: 10px;
 }
 
 .main-product-text {
-  font-size: 0.9vw;
+  font-size: 1.5rem;
+  font-weight: 200;
   color: white;
 }
 
 .main-product-price {
-  font-size: 1.25vw;
+  font-size: 2rem;
   font-weight: 400;
+  color: #ffcf33;
+}
+
+/*product specifications section*/
+
+.product-specficcations {
+  width: 100%;
+  height: 75vh;
+  padding-left: 4vw;
+  padding-right: 5vw;
+  padding-top: 3vh;
+
+  background-color: #131416;
+
+  border-width: 2px;
+  border-style: solid;
+  border-color: #d5d6d9;
+  border-radius: 10px;
+}
+
+.product-specfications-header {
+  font-size: 2rem;
+  font-weight: 500;
+}
+
+.product-specfications-inner {
+  display: flex;
+  flex-direction: row;
+
+  width: 100%;
+  height: 80%;
+}
+
+.product-specifications-div {
+  display: flex;
+  flex-direction: row;
+
+  width: 100%;
+  height: 80%;
+}
+
+.product-specifications-div-left {
+  display: flex;
+  flex-direction: column;
+
+  p {
+    font-size: 1.25rem;
+    font-weight: 500;
+  }
+}
+
+.product-specifications-div-right {
+  display: flex;
+  flex-direction: column;
+
+  margin-left: 6vw;
+
+  p {
+    font-size: 1.1rem;
+  }
+}
+
+/*recommendations sections*/
+
+.recommendations-header {
+  margin-top: 5vh;
+  font-size: 2.5rem;
+  font-weight: 500;
+
   color: #ffcf33;
 }
