--- a/frontend/blata-ditz-frontend/src/index.css
+++ b/frontend/blata-ditz-frontend/src/index.css
@@ -99,10 +99,12 @@ select,
   justify-content: center;
   align-items: center;
   position: relative;
-  margin-top: 2vh;
+
+  padding-top: 6vh;
+  padding-bottom: 6vh;
 
   width: 100%;
-  height: 20vh;
+  height: fit-content;
   bottom: 0;
 
   background-color: #131416;
