--- a/frontend/blata-ditz-frontend/src/index.css
+++ b/frontend/blata-ditz-frontend/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Ubuntu", sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -76,7 +76,7 @@ select,
 .search-bar {
   background-image: linear-gradient(to right, black, #131416);
   width: clamp(10rem, 60vw, 85rem);
-  border-radius: 5px;
+  border-radius: 10px;
   border: 1px solid #d5d6d9;
   padding: 0.8rem 1.2rem;
   display: flex;
@@ -89,6 +89,76 @@ select,
   border: none;
   width: 100%;
   color: #d5d6d9;
+}
+
+.signin-button {
+  width: fit-content;
+  height: fit-content;
+  padding: 10px 30px;
+
+  font-size: 1.2rem;
+  font-weight: 400;
+
+  background-color: #131416;
+  color: white;
+
+  border: 1px solid #d5d6d9;
+  border-radius: 10px;
+
+  transition: 0.5s ease;
+}
+
+.signin-button:hover {
+  background-color: white;
+  color: black;
+
+  border-radius: 10px;
+  border: 1px solid black;
+}
+
+.signup-button {
+  width: fit-content;
+  height: fit-content;
+  padding: 10px 30px;
+
+  font-size: 1.2rem;
+  font-weight: 400;
+
+  background-color: white;
+  color: black;
+
+  border-radius: 10px;
+  border: 1px solid black;
+
+  transition: 0.5s ease;
+}
+
+.signup-button:hover {
+  background-color: #131416;
+  color: white;
+
+  border: 1px solid #d5d6d9;
+  border-radius: 10px;
+}
+
+/*sign in and sign up popups*/
+
+.pop-uo-parent-container {
+  position: relative;
+  display: inline-block;
+}
+
+.pop-up-container {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+
+  background-color: linear-gradient(
+    180deg,
+    rgba(7, 7, 9, 1) 0%,
+    rgba(19, 20, 22, 1) 100%
+  );
 }
 
 /*footer*/
