--- a/frontend/blata-ditz-frontend/src/index.css
+++ b/frontend/blata-ditz-frontend/src/index.css
@@ -95,7 +95,7 @@ select,
 .signin-button {
   width: fit-content;
   height: fit-content;
-  padding: 10px 30px;
+  padding: 10px 28px;
 
   font-size: 1.2rem;
   font-weight: 400;
@@ -105,7 +105,7 @@ select,
 
   border: 1px solid #d5d6d9;
   border-radius: 10px;
-
+  white-space: nowrap;
   transition: 0.5s ease;
 }
 
@@ -120,7 +120,7 @@ select,
 .signup-button {
   width: fit-content;
   height: fit-content;
-  padding: 10px 30px;
+  padding: 10px 20px;
 
   font-size: 1.2rem;
   font-weight: 400;
@@ -132,6 +132,7 @@ select,
   border: 1px solid black;
 
   transition: 0.5s ease;
+  white-space: nowrap;
 }
 
 .signup-button:hover {
