--- a/frontend/blata-ditz-frontend/src/pages/Landing.css
+++ b/frontend/blata-ditz-frontend/src/pages/Landing.css
@@ -1,10 +1,146 @@
 .page-content {
   margin-left: 6vw;
   margin-right: 6vw;
-  margin-top: 5vh;
+  margin-top: 5vh !important;
   margin-bottom: 2vh !important;
 }
 
+/* banner section */
+.banner-container {
+  width: 100%;
+  height: 50vh;
+  background-color: #070705;
+  border-radius: 10px;
+  border: 1px solid #d5d6d9;
+  padding: 5rem;
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 1rem;
+  margin-bottom: 5vh !important;
+}
+.text-banner {
+  display: flex;
+  flex-direction: column;
+  color: white;
+  width: 50%;
+  gap: 0.3rem;
+}
+.banner-heading {
+  font-size: 3.4rem;
+  font-weight: 600;
+  font-style: italic;
+}
+
+.text-banner p {
+  font-size: 1.6rem;
+  font-weight: 400;
+
+  margin: 0;
+  margin-bottom: 2rem;
+}
+
+.button-banner {
+  background-color: #ffcf33;
+  padding: 1rem;
+  width: 130px;
+  text-align: center;
+  color: black;
+  border-radius: 8px;
+  font-size: 1.4rem;
+}
+
+.img-banner {
+  height: 50vh;
+  width: 35vw;
+}
+
+.img-banner img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+/* products section */
+.categories {
+  padding: 2rem 6rem;
+  border: 0.5px solid #d9d9d9;
+  border-radius: 8px;
+  margin-bottom: 2rem;
+}
+
+.categories ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  color: #ffcf33;
+  font-size: 1.6rem;
+}
+
+.products {
+  display: grid;
+  grid-auto-rows: min-content;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 4.5rem;
+  width: 100%;
+  margin: 0;
+}
+
+.item {
+  background-color: #131416;
+  border-radius: 8px;
+  overflow: hidden;
+  border: 0.5px solid #d5d6d9;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+}
+
+.item-img {
+  height: 57%;
+}
+
+.item-img img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.item-content {
+  padding: 1rem 2rem 0.1rem 2rem;
+  justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+}
+.item-details {
+  display: flex;
+  flex-direction: column;
+}
+
+.price {
+  font-size: 2.5rem;
+  font-weight: 600;
+  color: #ffcf33;
+}
+
+.title {
+  font-size: 1.4rem;
+}
+
+.view-item-btn {
+  margin-top: auto;
+  background-color: #070709;
+  border: 0.5px solid #d5d6d9;
+  border-radius: 8px;
+  color: #ffcf33;
+  font-size: 1.4rem;
+  padding: 0.7rem 0;
+
+  font-weight: 600;
+  text-align: center;
+}
 /*featured games sections*/
 
 .featured-container {
