--- a/frontend/blata-ditz-frontend/src/pages/Landing.css
+++ b/frontend/blata-ditz-frontend/src/pages/Landing.css
@@ -12,13 +12,13 @@
   background-color: #070705;
   border-radius: 10px;
   border: 1px solid #d5d6d9;
-  padding: 5rem;
+  padding: 7rem;
   overflow: hidden;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  gap: 1rem;
+  gap: 0.5rem;
   margin-bottom: 5vh !important;
   transition: 0.5 ease;
 }
@@ -33,15 +33,15 @@
   font-size: 3.4rem;
   font-weight: 600;
   font-style: italic;
-  line-height: 6.5vh;
+  line-height: 0.9;
 }
 
 .text-banner p {
   font-size: 1.6rem;
   font-weight: 400;
-
+  width: 80%;
   margin: 0;
-  margin-bottom: 1vh;
+  margin-bottom: 0.6rem;
 }
 
 .button-banner {
@@ -52,6 +52,17 @@
   color: black;
   border-radius: 8px;
   font-size: 1.4rem;
+  display: inline-block;
+  transition: 0.5s;
+  border: 1px solid transparent;
+  cursor: pointer;
+  font-weight: 500;
+}
+
+.button-banner:hover {
+  background-color: #131416;
+  color: white;
+  border: 1px solid white;
 }
 
 .img-banner img {
@@ -60,7 +71,7 @@
   object-fit: contain;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 950px) {
   .img-banner {
     height: 40vh;
     width: 35vw;
@@ -85,6 +96,11 @@
   .button-banner {
     margin: 0 auto;
   }
+
+  .text-banner p {
+    width: 100%;
+    margin: 0 auto;
+  }
 }
 
 /* products section */
@@ -104,6 +120,31 @@
   font-size: 1.6rem;
   flex-wrap: wrap;
   gap: 1rem;
+}
+
+.categories li button {
+  background: none;
+  font: inherit;
+  color: inherit;
+  cursor: pointer;
+  border: none;
+  position: relative;
+}
+
+.categories li button::after {
+  content: "";
+  position: absolute;
+  left: 5px;
+
+  bottom: -3px;
+  height: 2px;
+  background: #d5d6d9;
+  width: 0%;
+  transition: width 0.25s ease;
+}
+
+.categories li button:hover::after {
+  width: 30px;
 }
 
 .products {
