--- a/frontend/blata-ditz-frontend/src/index.css
+++ b/frontend/blata-ditz-frontend/src/index.css
@@ -65,7 +65,8 @@ select,
   z-index: 1000;
   position: sticky;
   background-color: #070709;
-  gap: 6rem;
+  gap: 2rem;
+  flex-wrap: wrap;
 }
 
 .nav-links {
@@ -73,23 +74,48 @@ select,
   gap: clamp(1rem, 2vw, 3rem);
   align-items: center;
 }
-.search-bar {
+
+.search-icon {
+  display: none;
+  margin-bottom: 3px;
+}
+.search-bar,
+.small-searchbar {
   background-image: linear-gradient(to right, black, #131416);
-  width: clamp(10rem, 60vw, 85rem);
+  width: clamp(8rem, 45vw, 85rem);
   border-radius: 10px;
   border: 1px solid #d5d6d9;
   padding: 0.8rem 1.2rem;
   display: flex;
   flex-direction: row;
   gap: 0.8rem;
+  min-width: 0;
+  max-width: 100%;
 }
 
-.search-bar input {
+.small-screen-searchbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 10vh;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  background-color: black;
+}
+
+.search-bar input,
+.small-searchbar input {
   background: transparent;
   border: none;
   width: 100%;
   color: #d5d6d9;
   outline: none;
+}
+
+.small-searchbar {
+  width: 100% !important;
 }
 
 .signin-button {
@@ -141,6 +167,15 @@ select,
 
   border: 1px solid #d5d6d9;
   border-radius: 10px;
+}
+
+@media (max-width: 830px) {
+  .search-bar {
+    display: none;
+  }
+  .search-icon {
+    display: block;
+  }
 }
 
 /*sign in and sign up popups*/
