--- a/frontend/blata-ditz-frontend/src/index.css
+++ b/frontend/blata-ditz-frontend/src/index.css
@@ -98,13 +98,21 @@ select,
   top: 0;
   left: 0;
   width: 100%;
-  height: 10vh;
+  height: 0;
   align-items: center;
   justify-content: center;
   display: flex;
   background-color: black;
+  padding: 1rem 6rem;
+  overflow: hidden;
+  transition: height 0.3s cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 0;
 }
-
+.small-screen-searchbar.open {
+  height: 13vh;
+  opacity: 1;
+}
 .search-bar input,
 .small-searchbar input {
   background: transparent;
@@ -170,7 +178,7 @@ select,
 }
 
 @media (max-width: 830px) {
-  .search-bar {
+  .search-close {
     display: none;
   }
   .search-icon {
