--- a/frontend/blata-ditz-frontend/src/pages/Admin.css
+++ b/frontend/blata-ditz-frontend/src/pages/Admin.css
@@ -45,6 +45,16 @@ li {
 .main-content {
   width: 100%;
 }
+
+@media (max-width: 960px) {
+  .sidebar span {
+    display: none;
+  }
+  .sidebar {
+    min-width: 0;
+    width: auto;
+  }
+}
 /* STYLES FOR ORDERS-TAB */
 .admin-orders-section {
   gap: 1.6rem;
@@ -99,11 +109,11 @@ li {
 .admin-orders-columnHeader,
 .admin-orders-list {
   display: grid;
-  grid-template-columns: 0.7fr 0.2fr 2fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 0.7fr 1fr 1fr 1fr 1fr;
   font-size: 1.6rem;
   color: #ffcf33;
-  padding: 0 2rem 0 1.2rem;
-  gap: 0.6rem;
+  padding-left: 1.2rem;
+  gap: 1rem;
 }
 
 .admin-orders-list {
