--- a/frontend/blata-ditz-frontend/src/pages/Admin.css
+++ b/frontend/blata-ditz-frontend/src/pages/Admin.css
@@ -112,16 +112,98 @@ li {
   grid-template-columns: 0.7fr 1fr 1fr 1fr 1fr;
   font-size: 1.6rem;
   color: #ffcf33;
-  padding-left: 1.2rem;
+  justify-content: center;
+  padding-left: 5vw;
   gap: 1rem;
 }
 
 .admin-orders-list {
   color: white;
+  background-image: linear-gradient(to top, #131416, #070709);
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  border-radius: 15px;
+  margin-bottom: 10px;
+  overflow: hidden;
+}
+
+.admin-orders-list:hover {
+  background-image: none;
+  background-color: #131416;
 }
 
 .admin-orders-list span,
 .admin-orders-columnHeader span {
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.admin-orders-popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  z-index: 998;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.admin-orders-popup {
+  display: flex;
+  z-index: 999;
+  background-color: #131416;
+  border-radius: 15px;
+  border: 0.5px solid #878787;
+  width: 50%;
+  height: 60%;
+  flex-direction: column;
+  overflow: hidden;
+}
+.admin-orders-popup-close {
+  padding: 1.5rem 2rem 0.5rem 1.5rem;
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: row;
+  width: 100%;
+}
+.admin-orders-popup-content {
+  padding: 0 5rem 5rem 5rem;
+}
+
+.orders-id {
+  margin-bottom: 20px;
+}
+.order-id-title {
+  font-size: 1.6rem;
+}
+.order-id-no {
+  font-size: 2.4rem;
+}
+
+.first-column {
+  width: 45%;
+}
+
+.order-details {
+  display: flex;
+  flex-direction: column;
+  font-weight: 300;
+  background-color: #010101;
+  margin-bottom: 7px;
+  border: 0.5px solid #878787;
+  border-radius: 10px;
+  padding: 1rem;
+  overflow: hidden;
+}
+
+.order-detail-title {
+  font-size: 1.2rem;
+}
+
+.order-detail-value {
+  font-size: 1.6rem;
 }
