--- a/frontend/blata-ditz-frontend/src/pages/Product.css
+++ b/frontend/blata-ditz-frontend/src/pages/Product.css
@@ -11,9 +11,10 @@
 
 .main-product-container {
   width: 100%;
-  height: 70vh;
+
   padding-left: 5vw;
   padding-right: 5vw;
+  padding-bottom: 8vh;
   margin-bottom: 5vh;
 
   background-color: #131416;
@@ -67,7 +68,7 @@
 .main-product-descriptions {
   width: 45%;
 
-  padding-top: 2vh;
+  padding-top: 4vh;
 
   display: flex;
   flex-direction: column;
@@ -78,7 +79,7 @@
   flex-direction: row;
   align-items: center;
 
-  line-height: 8px;
+  line-height: 3vh;
 }
 
 .main-product-name {
@@ -87,7 +88,7 @@
   font-size: 2.25rem;
   font-weight: 500;
 
-  margin-bottom: 1vh;
+  margin-bottom: 0.5vh;
 }
 
 .divider {
@@ -109,11 +110,13 @@
 }
 
 .main-product-textdesc {
-  font-size: 1.5rem;
-  font-weight: 200;
-  color: white;
-
-  margin-bottom: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  p {
+    font-size: 1.5rem;
+    font-weight: 200;
+    color: white;
+  }
 }
 
 .main-product-text {
@@ -123,7 +126,7 @@
 }
 
 .main-product-price {
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-weight: 400;
   color: #ffcf33;
 }
@@ -132,10 +135,10 @@
 
 .product-specficcations {
   width: 100%;
-  height: 75vh;
+  min-height: fit-content;
   padding-left: 4vw;
-  padding-right: 5vw;
   padding-top: 3vh;
+  padding-bottom: 4vh;
 
   background-color: #131416;
 
@@ -180,17 +183,110 @@
   display: flex;
   flex-direction: column;
 
+  gap: 10px 50px;
+
   margin-left: 6vw;
 
   p {
-    font-size: 1.1rem;
+    font-size: 1.3rem;
   }
+}
+
+.quantity-selector {
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+}
+
+.quantity-button {
+  background-color: black;
+  color: white;
+  border: 1px solid #d5d6d9;
+  font-size: 1.2rem;
+
+  padding: 5px 10px;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+  user-select: none;
+}
+
+.quantity-button:disabled {
+  background-color: #444;
+  color: #888;
+  cursor: not-allowed;
+}
+
+.quantity-input {
+  width: 70px;
+  height: 30px;
+
+  text-align: center;
+
+  border: 1px solid white;
+  background-color: black;
+  color: white;
+
+  font-size: 1.3rem;
+
+  padding: 0;
+}
+
+.quantity-input::-webkit-outer-spin-button,
+.quantity-input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.main-product-button-section {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  margin-top: 5vh;
+}
+
+.main-product-add2cart {
+  background-color: white;
+  border: 1px solid black;
+  width: 8vw;
+
+  color: black;
+  font-size: 1.5rem;
+  font-weight: 400;
+
+  padding: 1.5vh;
+
+  transition: 0.5s ease;
+}
+
+.main-product-buynow {
+  background-color: #ffcf33;
+  border: 1px solid black;
+  width: 8vw;
+
+  color: black;
+  font-size: 1.5rem;
+  font-weight: 400;
+
+  padding: 1.5vh;
+  transition: 0.5s ease;
+}
+
+.main-product-add2cart:hover,
+.main-product-buynow:hover {
+  background-color: black;
+  color: white;
 }
 
 /*recommendations sections*/
 
 .recommendations-header {
   margin-top: 5vh;
+  margin-bottom: 5vh;
   font-size: 2.5rem;
   font-weight: 500;
 
