Fixed an issue in Admin View. Added details to landing page.

--- a/frontend/blata-ditz-frontend/src/pages/Admin.css
+++ b/frontend/blata-ditz-frontend/src/pages/Admin.css
@@ -169,6 +169,7 @@ li {
   justify-content: flex-end;
   flex-direction: row;
   width: 100%;
+  cursor: pointer;
 }
 .admin-orders-popup-content {
   padding: 0 5rem 5rem 5rem;
