--- a/frontend/blata-ditz-frontend/src/pages/Landing.css
+++ b/frontend/blata-ditz-frontend/src/pages/Landing.css
@@ -213,9 +213,12 @@
   color: #ffcf33;
   font-size: 1.4rem;
   padding: 0.7rem 0;
-
+  cursor: pointer;
   font-weight: 600;
   text-align: center;
+}
+.view-item-btn:hover {
+  background-color: #1a1b1e;
 }
 /*featured games sections*/
 
