--- a/frontend/blata-ditz-frontend/src/index.css
+++ b/frontend/blata-ditz-frontend/src/index.css
@@ -112,7 +112,9 @@ select,
   transition: height 0.3s cubic-bezier(0.4, 0, 0.2, 1),
     opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 0;
+  z-index: 2000;
 }
+
 .small-screen-searchbar.open {
   height: 13vh;
   opacity: 1;
