--- a/frontend/blata-ditz-frontend/src/pages/AdminInventory.css
+++ b/frontend/blata-ditz-frontend/src/pages/AdminInventory.css
@@ -64,10 +64,6 @@ li {
   );
 }
 
-.main-content {
-  width: 100%;
-}
-
 @media (max-width: 960px) {
   .sidebar span {
     display: none;
@@ -75,5 +71,181 @@ li {
   .sidebar {
     min-width: 0;
     width: auto;
+  }
+}
+
+.main-content-inventory {
+  width: 100%;
+}
+
+.sb-inventory {
+  width: 100%;
+  padding: 15px 20px;
+}
+
+/*inventory table*/
+
+.inventory-list {
+  margin-top: 20px;
+  background-color: black;
+  border-radius: 8px;
+  padding: 10px;
+}
+
+.product-table-header,
+.product-table-rows {
+  display: grid;
+  grid-template-columns: 80px 150px minmax(180px, 3fr) 80px 120px 60px;
+  gap: 15px;
+  padding: 5px 10px;
+  align-items: center;
+}
+
+.product-table-header {
+  font-weight: normal;
+  font-size: 1.25rem;
+  color: #ffcf33;
+  margin-bottom: 10px;
+  padding-top: 15px;
+}
+
+.product-cell,
+.table-header-cell {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  min-height: 70px;
+  margin-bottom: 1vh;
+
+  font-size: 1.5rem;
+}
+
+.product-cell-active,
+.table-header-cell:last-child {
+  justify-content: center;
+  text-align: center;
+}
+
+.product-cell-image img {
+  width: 100px;
+  height: 60px;
+  object-fit: cover;
+  border-radius: 4px;
+}
+
+.product-cell-name {
+  font-size: 1.5rem;
+  line-height: 1.3;
+  padding-right: 10px;
+}
+
+.brand-header {
+  display: flex;
+  align-items: center;
+  padding: 15px 20px;
+  margin-top: 15px;
+  background-color: #070709;
+  border-radius: 5px;
+  cursor: pointer;
+  color: #fff;
+  transition: background-color 0.2s;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.brand-header:hover {
+  background: #070709;
+  background: linear-gradient(
+    90deg,
+    rgba(7, 7, 9, 1) 23%,
+    rgba(19, 20, 22, 1) 100%
+  );
+}
+
+.brand-logo-container {
+  width: 30px;
+  height: 30px;
+  margin-right: 15px;
+  background-color: #e04444;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.brand-logo-text {
+  font-size: 1.1rem;
+  font-weight: bold;
+  color: #fff;
+}
+
+.brand-name {
+  flex-grow: 1;
+
+  font-size: 1.75rem;
+  font-weight: 400;
+}
+
+.brand-dropdown-icon {
+  transition: transform 0.3s ease;
+}
+.brand-header.active .brand-dropdown-icon {
+  transform: rotate(180deg);
+}
+
+input[type="checkbox"] {
+  accent-color: #ffcf33;
+}
+
+.add-product-row {
+  display: flex;
+  justify-content: center;
+  padding: 15px 0 20px 0;
+  margin-top: 1px;
+  border-top: 2px dotted #333;
+}
+
+.add-product-btn {
+  background: none;
+  color: #ffcf33;
+  border: 1px solid #ffcf33;
+
+  padding: 10px 20px;
+  border-radius: 6px;
+  margin-top: 2vh;
+
+  font-size: 1rem;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.add-product-btn:hover {
+  background-color: #ffcf33;
+  color: #070709;
+  border-color: #ffcf33;
+}
+
+.no-products-message {
+  padding: 20px;
+  color: #999;
+  text-align: center;
+  font-size: 1.25rem;
+  font-style: italic;
+  border: 1px dashed #333;
+  margin-top: 10px;
+  border-radius: 4px;
+}
+
+@media (max-width: 768px) {
+  .product-table-header,
+  .product-table-rows {
+    grid-template-columns: 50px 70px 1fr 60px 80px 40px;
+    gap: 10px;
+  }
+  .product-cell-image img {
+    width: 50px;
+  }
+  .product-cell-name {
+    font-size: 0.85rem;
   }
 }
