categories page layout done

--- a/frontend/blata-ditz-frontend/src/pages/AdminInventory.css
+++ b/frontend/blata-ditz-frontend/src/pages/AdminInventory.css
@@ -89,7 +89,7 @@ li {
   margin-top: 20px;
   background-color: black;
   border-radius: 8px;
-  padding: 10px;
+  padding: 10px 20px;
 }
 
 .product-table-header,
