--- a/frontend/blata-ditz-frontend/src/pages/AdminCategories.css
+++ b/frontend/blata-ditz-frontend/src/pages/AdminCategories.css
@@ -64,8 +64,12 @@ li {
   );
 }
 
-.main-content {
+.main-content-categories {
   width: 100%;
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 @media (max-width: 960px) {
@@ -75,5 +79,81 @@ li {
   .sidebar {
     min-width: 0;
     width: auto;
+  }
+}
+
+.category-grid-container {
+  display: grid;
+  grid-template-columns: repeat(4, minmax(130px, 1fr));
+  gap: 20px;
+  padding: 20px;
+  background-color: #131416;
+  border-radius: 8px;
+
+  align-content: flex-start;
+  width: 100%;
+}
+
+.category-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 150px;
+  background-color: #1a1a1c;
+  border-radius: 10px;
+  border: none;
+  background-color: 0.2s ease, transform 0.2s ease;
+  text-decoration: none;
+  color: #f0f0f0;
+}
+
+.category-card:hover {
+  background-color: #28282b;
+  transform: translateY(-3px);
+}
+
+.category-card-name {
+  font-size: 1.5rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+  text-align: center;
+}
+
+.category-card-icon {
+  width: 45px;
+  height: 45px;
+  margin-bottom: 10px;
+  color: white;
+}
+
+.category-card-action .category-card-icon {
+  filter: invert(0%);
+}
+.category-card-action {
+  background-color: #ffcf33;
+}
+
+.category-card-action:hover {
+  background-color: #e6b800;
+}
+
+@media (max-width: 1200px) {
+  .category-grid-container {
+    grid-template-columns: repeat(3, minmax(120px, 1fr));
+  }
+}
+
+@media (max-width: 768px) {
+  .category-grid-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 500px) {
+  .category-grid-container {
+    grid-template-columns: 1fr;
   }
 }
