--- a/frontend/blata-ditz-frontend/src/pages/AdminOrders.css
+++ b/frontend/blata-ditz-frontend/src/pages/AdminOrders.css
@@ -225,6 +225,7 @@ li {
   display: flex;
   flex-direction: row;
   gap: 2rem;
+  overflow-x: auto;
 }
 .details-status-payment,
 .details-status-order {
@@ -247,7 +248,7 @@ li {
   border-radius: 50px;
   text-align: center;
   appearance: none;
-  width: 14rem;
+  width: 13rem;
   margin-top: 3px;
   cursor: pointer;
 }
@@ -255,9 +256,60 @@ li {
 .order-details-columnHeader {
   display: grid;
   grid-template-columns: 1fr 0.3fr 1fr 3fr 1fr;
+  margin-bottom: 8px;
+  color: #ffcf33;
+  margin-top: 8px;
+  font-size: 1.6rem;
+}
+.order-details-columnHeader,
+.order-details-list,
+.order-details-amountbreakdown {
+  padding: 0 2rem;
 }
 
 .order-details-list {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.order-entry {
   display: grid;
   grid-template-columns: 1fr 0.3fr 1fr 3fr 1fr;
+  font-size: 1.6rem;
+}
+
+.order-details-img {
+  width: 90px;
+  height: 70px;
+  margin-right: 10px;
+}
+
+.order-details-item-img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.order-details-name {
+  padding-right: 3rem;
+}
+
+.order-details-amountbreakdown {
+  margin-top: 30px;
+
+  font-size: 1.6rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
+}
+.order-amountbreakdown-details {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.amountbreakdown-details-total {
+  font-weight: 600;
+  color: #ffcf33;
 }
