--- a/frontend/blata-ditz-frontend/src/pages/Landing.css
+++ b/frontend/blata-ditz-frontend/src/pages/Landing.css
@@ -162,7 +162,7 @@
   border-radius: 8px;
   overflow: hidden;
   border: 0.5px solid #d5d6d9;
-  height: 400px;
+  height: 50vh;
   display: flex;
   flex-direction: column;
 }
