updated admin inventory css

--- a/frontend/blata-ditz-frontend/src/pages/AdminCategories.css
+++ b/frontend/blata-ditz-frontend/src/pages/AdminCategories.css
@@ -185,7 +185,7 @@ li {
 }
 
 .category-modal-content h3 {
-  color: #ffcf33;
+  color: white;
   margin-top: 0;
   margin-bottom: 20px;
   border-bottom: 1px solid #333;
