--- a/frontend/blata-ditz-frontend/src/pages/AdminSuppliers.css
+++ b/frontend/blata-ditz-frontend/src/pages/AdminSuppliers.css
@@ -77,3 +77,85 @@ li {
     width: auto;
   }
 }
+
+/* SUPPLIER */
+
+.supplier-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 1rem;
+}
+.supplier-header .search-bar {
+  width: 100%;
+}
+
+.supplier-header button {
+  width: 12vw;
+  border-radius: 10px;
+  border: transparent;
+  background-color: #ffcf33;
+  color: black;
+}
+
+.supplier-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
+
+  gap: 1rem;
+  margin-top: 15px;
+  overflow: hidden;
+  width: 100%;
+}
+
+.supplier {
+  background-color: white;
+  height: 190px;
+  border-radius: 15px;
+
+  overflow: hidden;
+  cursor: pointer;
+  position: relative;
+}
+
+.supplier:hover .supplier-hover,
+.supplier-name {
+  opacity: 1;
+}
+
+.supplier-img-container {
+  width: 100%;
+  height: 100%;
+}
+.supplier-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.supplier-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: linear-gradient(to top, rgb(0, 0, 0), rgba(58, 58, 58, 0));
+  z-index: 10;
+  height: 100%;
+  width: 100%;
+}
+.supplier-name {
+  color: white;
+  font-size: 2.4rem;
+  font-weight: 600;
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 11;
+  padding: 0.5rem 1.5rem;
+  width: 100;
+}
+
+.supplier-background,
+.supplier-name {
+  opacity: 0;
+  transition: opacity 0.2s ease-out;
+}
