--- a/frontend/blata-ditz-frontend/src/pages/Landing.css
+++ b/frontend/blata-ditz-frontend/src/pages/Landing.css
@@ -1,6 +1,6 @@
 .page-content {
-  margin-left: 6vw;
-  margin-right: 6vw;
+  margin-left: 15vw !important;
+  margin-right: 15vw !important;
   margin-top: 5vh !important;
   margin-bottom: 2vh !important;
 }
@@ -151,10 +151,12 @@
   display: grid;
   grid-auto-rows: min-content;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 4.5rem;
+  gap: 1rem;
   width: 100%;
-
+  height: auto;
+  max-height: 100vh;
   margin-bottom: 5rem;
+  overflow-y: scroll;
 }
 
 .item {
@@ -162,7 +164,7 @@
   border-radius: 8px;
   overflow: hidden;
   border: 0.5px solid #d5d6d9;
-  height: 50vh;
+  height: 35vh;
   display: flex;
   flex-direction: column;
 }
@@ -285,7 +287,7 @@
 }
 
 .featuredimage {
-  height: 80%;
+  height: 70%;
   width: auto;
 
   user-select: none;
@@ -308,7 +310,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
 
-  width: 100%;
+  width: 95%;
   height: 100%;
 }
 
