Fixed CSS of Suppliers, Orders, and Users

--- a/frontend/blata-ditz-frontend/src/pages/AdminOrders.css
+++ b/frontend/blata-ditz-frontend/src/pages/AdminOrders.css
@@ -114,6 +114,11 @@ li {
   }
 }
 /* STYLES FOR ORDERS-TAB */
+
+.sb-orders {
+  padding: 15px;
+}
+
 .admin-orders-section {
   gap: 1.6rem;
   display: flex;
