--- a/frontend/blata-ditz-frontend/src/pages/AdminSuppliers.css
+++ b/frontend/blata-ditz-frontend/src/pages/AdminSuppliers.css
@@ -80,6 +80,29 @@ li {
 
 /* SUPPLIER */
 
+.supplier-header .search-bar {
+  align-items: center;
+}
+
+.supplier-table {
+  width: 100%;
+  margin-top: 20px;
+}
+.supplier-table-header,
+.supplier-row {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1.2fr 1fr 0.7fr 1fr;
+  width: 100%;
+  font-size: 1.4rem;
+  padding: 1rem 0;
+  border-bottom: 0.1px solid #d5d6d986;
+  text-align: left;
+}
+
+.supplier-row {
+  cursor: pointer;
+}
+
 .supplier-header {
   display: flex;
   flex-direction: row;
@@ -88,74 +111,4 @@ li {
 }
 .supplier-header .search-bar {
   width: 100%;
-}
-
-.supplier-header button {
-  width: 12vw;
-  border-radius: 10px;
-  border: transparent;
-  background-color: #ffcf33;
-  color: black;
-}
-
-.supplier-list {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
-
-  gap: 1rem;
-  margin-top: 15px;
-  overflow: hidden;
-  width: 100%;
-}
-
-.supplier {
-  background-color: white;
-  height: 190px;
-  border-radius: 15px;
-
-  overflow: hidden;
-  cursor: pointer;
-  position: relative;
-}
-
-.supplier:hover .supplier-hover,
-.supplier-name {
-  opacity: 1;
-}
-
-.supplier-img-container {
-  width: 100%;
-  height: 100%;
-}
-.supplier-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.supplier-background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-image: linear-gradient(to top, rgb(0, 0, 0), rgba(58, 58, 58, 0));
-  z-index: 10;
-  height: 100%;
-  width: 100%;
-}
-.supplier-name {
-  color: white;
-  font-size: 2.4rem;
-  font-weight: 600;
-
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  z-index: 11;
-  padding: 0.5rem 1.5rem;
-  width: 100;
-}
-
-.supplier-background,
-.supplier-name {
-  opacity: 0;
-  transition: opacity 0.2s ease-out;
 }
