--- a/frontend/blata-ditz-frontend/src/pages/pop-ups/SupplierPopups.css
+++ b/frontend/blata-ditz-frontend/src/pages/pop-ups/SupplierPopups.css
@@ -4,7 +4,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 998;
+  z-index: 1000;
   align-items: center;
   justify-content: center;
   display: flex;
@@ -13,7 +13,7 @@
 
 .admin-supplier-popup {
   display: flex;
-  z-index: 999;
+  z-index: 1001;
   background-color: #131416;
   border-radius: 15px;
 
@@ -154,13 +154,14 @@
   flex-direction: row;
 
   position: absolute;
-  bottom: 0;
+
   width: 100%;
   align-items: center;
   justify-content: space-between;
   right: 0;
   padding: 0 2rem 2rem 2rem;
   margin: 0;
+  margin-top: 10px;
 }
 .supplier-delete-btn,
 .supplier-update-btn,
@@ -197,7 +198,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000; /* Ensure it's above the edit modal */
+  z-index: 1002; /* Ensure it's above the edit modal */
 }
 
 .confirmation-modal {
